--- a/openstack-cluster/charts/cluster-addons/values.yaml
+++ b/openstack-cluster/charts/cluster-addons/values.yaml
@@ -221,16 +221,17 @@ metricsServer:
     values: {}
 
 # Settings for the Kubernetes dashboard
-# https://github.com/kubernetes/dashboard/tree/master/charts/helm-chart/kubernetes-dashboard
+# kubernetes-dashboard has been deprecated and removed: https://groups.google.com/g/kubernetes-sig-ui/c/vpYIRDMysek/m/wd2iedUKDwAJ?utm_medium=email&utm_source=footer&pli=1
+# the alternative to kubernetes-dashboard is headlamp: https://headlamp.dev/docs/latest/
 kubernetesDashboard:
   # Indicates if the Kubernetes dashboard should be enabled
   enabled: false
   chart:
-    repo: https://kubernetes.github.io/dashboard
-    name: kubernetes-dashboard
-    version: 6.0.8
+    repo: https://kubernetes-sigs.github.io/headlamp/
+    name: headlamp
+    version: 0.40.0
   release:
-    namespace: kubernetes-dashboard
+    namespace: kube-system
     values: {}
 
 # Settings for ingress controllers
